# Selenium_framework

./: param.py  pyproject.toml  report.html  report.xml
tests/: test_main_page.py  test_second_fichier.py
